syntax = "proto3";

package github.constantine27k.crnt_data_manager.api.comments;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Constantine27K/crnt-data-manager/pkg/api/comments;comments";

message Comment {
	string author = 1;
	google.protobuf.Timestamp written_at = 2;
	google.protobuf.Timestamp updated_at = 3;
	string updated_by = 4;
	string text = 5;
}

message Comments {
	repeated Comment items = 1;
}